--- a/zh/source/1_overview/introduction.html
+++ b/zh/source/1_overview/introduction.html
@@ -336,106 +336,116 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+      <tr>
       <td style="text-align: center; font-weight: bold;">Gemini 435Le</td>
       <td>Gemini 435Le</td>
-      <td>不支持</td>
-      <td>推荐用于新设计</td>
+      <td>not supported</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td rowspan="8" style="text-align: center; font-weight: bold;">Gemini 330</td>
+      <td>Gemini 335Le</td>
+      <td>not supported</td>
+      <td>recommended for new designs</td>
+    </tr>
+    <tr>
       <td>Gemini 335</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Gemini 336</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
-    </tr>
-    <tr>
-      <td>Gemini 335L</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
-    </tr>
-    <tr>
-      <td>Gemini 336L</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
-    </tr>
-    <tr>
-      <td>Gemini 335Lg</td>
-      <td>不支持</td>
-      <td>推荐用于新设计</td>
-    </tr>
-    <tr>
-      <td>Gemini 335Le</td>
-      <td>不支持</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Gemini 330</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
+    </tr>
+    <tr>
+      <td>Gemini 335L</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
+    </tr>
+    <tr>
+      <td>Gemini 336L</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Gemini 330L</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
-      <td rowspan="3" style="text-align: center; font-weight: bold;">Gemini 2</td>
+      <td>Gemini 335Lg</td>
+      <td>not supported</td>
+      <td>recommended for new designs</td>
+    </tr>
+    <tr>
+      <td rowspan="5" style="text-align: center; font-weight: bold;">Gemini 2</td>
       <td>Gemini 2</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Gemini 2 L</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Gemini 2 XL</td>
-      <td>推荐用于新设计</td>
-      <td>待支持</td>
+      <td>recommended for new designs</td>
+      <td>to be supported</td>
+    </tr>
+    <tr>
+      <td>Gemini 215</td>
+      <td>not supported</td>
+      <td>recommended for new designs</td>
+    </tr>
+    <tr>
+      <td>Gemini 210</td>
+      <td>not supported</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td rowspan="3" style="text-align: center; font-weight: bold;">Femto</td>
       <td>Femto Bolt</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Femto Mega</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Femto Mega I</td>
-      <td>完全维护</td>
-      <td>待支持</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td rowspan="3" style="text-align: center; font-weight: bold;">Astra</td>
       <td>Astra 2</td>
-      <td>完全维护</td>
-      <td>推荐用于新设计</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
     <tr>
       <td>Astra+</td>
-      <td>有限维护</td>
-      <td>不支持</td>
+      <td>limited maintenance</td>
+      <td>not supported</td>
     </tr>
     <tr>
       <td>Astra Pro Plus</td>
-      <td>有限维护</td>
-      <td>不支持</td>
+      <td>limited maintenance</td>
+      <td>not supported</td>
     </tr>
     <tr>
       <td style="text-align: center; font-weight: bold;">Astra Mini</td>
-      <td>Astra Mini Pro</td>
-      <td>完全维护</td>
-      <td>完全维护</td>
+      <td>Astra Mini (S) Pro</td>
+      <td>full maintenance</td>
+      <td>recommended for new designs</td>
     </tr>
   </tbody>
 </table><p><strong>注意</strong>：如果您没有找到您的设备，请联系我们的现场应用工程师（FAE）或销售代表寻求帮助。</p>
@@ -456,86 +466,71 @@
 <table border="1" class="docutils">
 <thead>
 <tr>
-<th style="text-align: left;">产品列表</th>
-<th style="text-align: left;">最低固件版本</th>
-<th style="text-align: left;"><strong>启动文件</strong></th>
+<th><strong>Products List</strong></th>
+<th><strong>Recommended FW Version</strong></th>
+<th>Launch File</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align: left;">Gemini 435Le</td>
-<td style="text-align: left;">1.2.04</td>
-<td style="text-align: left;">gemini435_le.launch</td>
+<td>Astra Mini Pro</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Astra-Mini-Pro">2.0.03</a></td>
+<td>astra.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 335</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Astra Mini S Pro</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Astra-Mini-S-Pro">2.0.03</a></td>
+<td>astra.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 336</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 435Le</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Gemin435Le-Firmware">1.3.2</a></td>
+<td>gemini435_le.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 335L</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 330 series</td>
+<td><a href="https://orbbec-debian-repos-aws.s3.amazonaws.com/product/Gemini330_Release_1.6.00.zip">1.6.00</a></td>
+<td>gemini_330_series.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 336L</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 215</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Gemini215-Firmware">1.0.9</a></td>
+<td>gemini210.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 335Lg</td>
-<td style="text-align: left;">1.3.46</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 210</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Gemini210-Firmware">1.0.9</a></td>
+<td>gemini210.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 335Le</td>
-<td style="text-align: left;">1.5.31</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 2</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Gemini2-Firmware">1.4.98</a></td>
+<td>gemini2.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 330</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Gemini 2 L</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Gemini2L-Firmware">1.5.2</a></td>
+<td>gemini2L.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 330L</td>
-<td style="text-align: left;">1.2.20</td>
-<td style="text-align: left;">gemini_330_series.launch</td>
+<td>Femto Bolt</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Femto-Bolt-Firmware">1.1.2</a></td>
+<td>femto_bolt.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 2</td>
-<td style="text-align: left;">1.4.92</td>
-<td style="text-align: left;">gemini2.launch</td>
+<td>Femto Mega</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Femto-Mega-Firmware">1.3.1</a></td>
+<td>femto_mega.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Gemini 2 L</td>
-<td style="text-align: left;">1.4.53</td>
-<td style="text-align: left;">gemini2L.launch</td>
+<td>Femto Mega I</td>
+<td><a href="https://github.com/orbbec/OrbbecFirmware/releases/tag/Femto-Mega-I-Firmware">2.0.4</a></td>
+<td>femto_mega.launch</td>
 </tr>
 <tr>
-<td style="text-align: left;">Femto Bolt</td>
-<td style="text-align: left;">1.1.2</td>
-<td style="text-align: left;">femto_bolt.launch</td>
-</tr>
-<tr>
-<td style="text-align: left;">Femto Mega</td>
-<td style="text-align: left;">1.3.0</td>
-<td style="text-align: left;">femto_mega.launch</td>
-</tr>
-<tr>
-<td style="text-align: left;">Astra 2</td>
-<td style="text-align: left;">2.8.20</td>
-<td style="text-align: left;">astra2.launch</td>
-</tr>
-<tr>
-<td style="text-align: left;">Astra Mini Pro</td>
-<td style="text-align: left;">2.0.01</td>
-<td style="text-align: left;">astra.launch</td>
+<td>Astra 2</td>
+<td><a href="https://orbbec-debian-repos-aws.s3.amazonaws.com/product/Astra2_Release_2.8.20.zip">2.8.20</a></td>
+<td>astra2.launch</td>
 </tr>
 </tbody>
 </table><p>所有启动文件本质上都是相似的，主要区别在于为同一系列中的不同型号设置的参数默认值。USB标准的差异（如USB 2.0与USB 3.0）可能需要调整这些参数。如果遇到启动失败，请仔细查阅规格说明书。特别注意启动文件中的分辨率设置以及其他参数，以确保兼容性和最佳性能。</p>
@@ -650,7 +645,7 @@ thead th {
 
   <div role="contentinfo">
     <p>&#169; 版权所有 2025, 奥比中光股份有限公司 www.orbbec.com.。
-      <span class="lastupdated">最后更新于 2025-10-23 07:11:58.
+      <span class="lastupdated">最后更新于 2025-10-23 09:58:53.
       </span></p>
   </div>
 
